--- a/sample_chat/test-chat-1.html
+++ b/sample_chat/test-chat-1.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <form action="">
+        <p id="you-are"></p>
         <input type="text" id="user-input" name="user_input" required>
         <button type="submit" id="submit">Submit</button>
         <div id="response">No responses.</div>
