Fix link path in index.html for sample chat reference

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Firebase Testing Links</title>
 </head>
 <body>
-    <p><a href="/sample_chat/test-chat-1.html">/sample_chat/test-chat-1.html</a></p>
+    <p><a href="sample_chat/test-chat-1.html">/sample_chat/test-chat-1.html</a></p>
 </body>
 </html>
