Refactor authentication handling in chat application; implement user state management and profile updates

--- a/sample_chat/test-chat-1.html
+++ b/sample_chat/test-chat-1.html
@@ -38,7 +38,7 @@
 
 </body>
 
-<!-- <script type="module" src="test-chat-1.js"></script> -->
-<script type="module" src="test-chat-1-auth.js"></script>
+<script type="module" src="test-chat-1.js"></script>
+<!-- <script type="module" src="test-chat-1-auth.js"></script> -->
 
 </html>
